[lab3] api finished
