# docs/swagger.json
@@ -155,6 +155,41 @@
                 }
             }
         },
+        "/cars/delete": {
+            "delete": {
+                "description": "Delete a car via its uuid",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Change"
+                ],
+                "summary": "Delete a car",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "UUID машины",
+                        "name": "UUID",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ModelCarDeleted"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ModelError"
+                        }
+                    }
+                }
+            }
+        },
         "/cars/price": {
             "get": {
                 "description": "Get a price via uuid of a car",
@@ -179,6 +214,48 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.ModelCarPrice"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ModelError"
+                        }
+                    }
+                }
+            }
+        },
+        "/cars/price/change": {
+            "put": {
+                "description": "Change a price for a car via its uuid",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Change"
+                ],
+                "summary": "Change car price",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "UUID машины",
+                        "name": "UUID",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Новая цена",
+                        "name": "Price",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ModelPriceChanged"
                         }
                     },
                     "500": {
@@ -245,6 +322,14 @@
                 }
             }
         },
+        "models.ModelCarDeleted": {
+            "type": "object",
+            "properties": {
+                "price": {
+                    "type": "boolean"
+                }
+            }
+        },
         "models.ModelCarPrice": {
             "type": "object",
             "properties": {
@@ -267,6 +352,14 @@
                 "type": {
                     "description": "type",
                     "type": "string"
+                }
+            }
+        },
+        "models.ModelPriceChanged": {
+            "type": "object",
+            "properties": {
+                "price": {
+                    "type": "boolean"
                 }
             }
         }
