# swagger/models/model_car_deleted.go
@@ -1,0 +1,5 @@
+package models
+
+type ModelCarDeleted struct {
+	Success bool `json:"price,omitempty"`
+}
