# swagger/models/model_price_changed.go
@@ -1,0 +1,5 @@
+package models
+
+type ModelPriceChanged struct {
+	Success bool `json:"price,omitempty"`
+}
